[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "inm_package"
authors = [
  {name = "Pierre-Louis Barbarant", email = "plbarbarant@gmail.com"},
]
description = "A tutorial package for the INM code review session"
readme = "README.md"
keywords = ["tutorial", "pull-request", "example"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dynamic = ["version"]
requires-python = ">=3.7"
dependencies = [
  "dijkstra3d>=1.12.1",
  "joblib>=1.2.0",
  "numpy<2",
  "rich>=13.3.1",
  "POT>=0.9.0",
  "scikit-learn",
  "scipy",
  "torch>=1.12",
  "tvb-gdist>=2.1.1",
]

[project.optional-dependencies]
dev = [
  "black",
  "inm_package[test]",
  "pre-commit",
]
test = [
  "flake8",
  "pyproject-flake8",
  "pytest>=7.2",
]

[project.urls]
homepage = "https://github.com/pbarbarant/inm_package"
repository = "https://github.com/pbarbarant/inm_package.git"

[tool.black]
line-length = 79
preview = true

[tool.flake8]
ignore = ["E203", "W503"]

[tool.setuptools.dynamic]
version = {attr = "inm_package.__version__"}